Feature: 72654979 - Inclusão de endpoint de finalização de preparo de pedido
