# src/swagger-output.json
@@ -523,77 +523,6 @@
         }
       }
     },
-    "/pedido/iniciar-preparacao/{pedidoId}": {
-      "get": {
-        "tags": [
-          "Pedidos"
-        ],
-        "summary": "Iniciar preparação de um pedido",
-        "description": "Endpoint para iniciar a preparação de um pedido",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "pedidoId",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "description": "ID do pedido",
-            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Preparação do pedido iniciada com sucesso",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Preparação do pedido iniciada com sucesso"
-                },
-                "pedido": {
-                  "type": "object",
-                  "properties": {
-                    "id": {
-                      "type": "string",
-                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-                    },
-                    "data": {
-                      "type": "string",
-                      "example": "2021-10-10T15:00:00.000Z"
-                    },
-                    "clienteId": {
-                      "type": "string",
-                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
-                    },
-                    "status": {
-                      "type": "string",
-                      "example": "RASCUNHO"
-                    },
-                    "pagamentoStatus": {
-                      "type": "string",
-                      "example": "PENDENTE"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Ocorreu um erro inesperado",
-            "schema": {
-              "properties": {
-                "mensagem": {
-                  "type": "string",
-                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/pedido/fechar/{pedidoId}": {
       "get": {
         "tags": [
@@ -693,6 +622,148 @@
                 "mensagem": {
                   "type": "string",
                   "example": "Pedido pago com sucesso"
+                },
+                "pedido": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                    },
+                    "data": {
+                      "type": "string",
+                      "example": "2021-10-10T15:00:00.000Z"
+                    },
+                    "clienteId": {
+                      "type": "string",
+                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                    },
+                    "status": {
+                      "type": "string",
+                      "example": "RASCUNHO"
+                    },
+                    "pagamentoStatus": {
+                      "type": "string",
+                      "example": "PENDENTE"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/pedido/iniciar-preparacao/{pedidoId}": {
+      "get": {
+        "tags": [
+          "Pedidos"
+        ],
+        "summary": "Iniciar preparação de um pedido",
+        "description": "Endpoint para iniciar a preparação de um pedido",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "pedidoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do pedido",
+            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Preparação do pedido iniciada com sucesso",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Preparação do pedido iniciada com sucesso"
+                },
+                "pedido": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                    },
+                    "data": {
+                      "type": "string",
+                      "example": "2021-10-10T15:00:00.000Z"
+                    },
+                    "clienteId": {
+                      "type": "string",
+                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                    },
+                    "status": {
+                      "type": "string",
+                      "example": "RASCUNHO"
+                    },
+                    "pagamentoStatus": {
+                      "type": "string",
+                      "example": "PENDENTE"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/pedido/finalizar-preparacao/{pedidoId}": {
+      "get": {
+        "tags": [
+          "Pedidos"
+        ],
+        "summary": "Finalizar preparação de um pedido",
+        "description": "Endpoint para finalizar a preparação de um pedido",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "pedidoId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID do pedido",
+            "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Preparação do pedido finalizada com sucesso",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Preparação do pedido finalizada com sucesso"
                 },
                 "pedido": {
                   "type": "object",
